--- a/index.html
+++ b/index.html
@@ -136,5 +136,5 @@
          </section>
       </footer>
    </body>
-   <script src="./JS/main.js"></script>  
+   <script src="./Js/main.js"></script>  
 </html>
